examples/errors/0_unresolved_type/definitions.tmd
#namespace <definitions>

group Root {}
element Window -> FakeGroup;